@@ -1,7 +1,7 @@
 # Blog of Miscellaneous Projects
 <pre>
 Created by:             DMCTruong
-Date of Last Update:    August 29, 2017
+Date of Last Update:    August 31, 2017
 Version:                Projects Blog Version 2
 Website Link:		<a href="https://dmctruong.github.io/index.html">https://dmctruong.github.io/index.html</a>
 </pre>
@@ -13,14 +13,16 @@ The Blog of Miscellaneous Projects is a website that showcases some of the proje
 ||
 |:------------------------------------------------------|
 |1. Working on adding more information about the projects. |
-|2. Working on X3DOM Project |
+|2. Find and resolve the overriding issues on some pages.|
 |3. Add a "please wait" message to gallery page |
-|4. Add a page for Discord Bot project |
+
 
 # To-do List:
 ||
 |:----------------------------------------------------|
-|1. Add a page about the website's background |
-|2. Add a Java try-me |
-|3. Update Contact page |
-|4. Work on Project Blog Version 3|
+|1. Add a Java try-me |
+|2. Add a page for Discord Bot project |
+|3. Add a page about the website's background |
+|4. Update Contact page |
+|5. Working on X3DOM Project |
+|6. Work on Project Blog Version 3|
