@@ -1,9 +1,9 @@
 /* 
-Site Name : 	A Miscellaneous Projects Blog
-Author :	Diane Truong
-Date :          July 10, 2017
-File :            custom.css
-Description : Contains default styles used throughout the website
+Site Name   : A Miscellaneous Projects Blog
+Author      : Diane Truong
+Date        : August 31, 2017
+File        : custom.css
+Description : Contains custom styles that differs or overrides the default css
 */
 
 
