@@ -32,6 +32,7 @@
             <div style="height: 430px;">
                 <x3d width='870px' height='400px'>
                     <scene>
+                        <navigationInfo id="head" headlight='true' type='"EXAMINE"'>  </navigationInfo> 
                         <viewpoint position="-1.94639 1.79771 -2.89271" orientation="0.03886 0.99185 0.12133 3.75685"></viewpoint>
                         <Inline nameSpaceName="Cube" mapDEFToID="true" url="models/model.x3d" />
                     </scene>
