@@ -18,7 +18,7 @@
         <!-- Content -->
         <div class="wrapper" style="height: 1650px;">
             <h2 class="spacing_large">Art Gallery</h2>
-            <p>Below is an art gallery that is powered by JavaScript.</p>
+            <p align="center" style="padding: 30px; margin-top: -10px; background: #707070; color: #fff; font-family: 'Raleway', sans-serif;">Below is an art gallery that is made with JavaScript.<br /><br />For now, the gallery only have a few basic functions. The user can click on an image and it will open a light box modal. From there, the user can click either the left/right arrows or one of the images listed in a row below the displayed image to display the next image. Additional galleries and gallery functions will be added in the future.</p>
             <!-- Image Rows -->
             <div id="container">
                 <div id="gallery_col">
